<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="#FFFFFF"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout android:background="#0C2E18"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_reset"
            android:layout_width="5dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:contentDescription="@string/imj_reset"
            android:scaleType="fitXY"
            android:src="@drawable/reset_game"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="0dp"
            android:background="#2137AF"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/name_game"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:textSize="25sp" />
    </LinearLayout>
    <LinearLayout
        android:padding="8dp"
        android:layout_width="match_parent"
        android:background="#2137AF"
        android:layout_height="0dp"
        android:layout_weight="0.23">
        <ImageView
            android:id="@+id/img1"
            android:background="#FFFFFF"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="17dp"
            android:layout_marginBottom="0dp"
            android:scaleType="centerInside"
            android:layout_weight="0.33"
            android:contentDescription="@string/imj1"
            tools:ignore="NestedWeights"
            android:layout_marginEnd="2dp" />
        <ImageView
            android:id="@+id/img2"
            android:background="#FFFFFF"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="17dp"
            android:layout_marginBottom="0dp"
            android:scaleType="centerInside"
            android:layout_weight="0.33"
            android:contentDescription="@string/imj2" />
        <ImageView
            android:id="@+id/img3"
            android:background="#FFFFFF"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_marginBottom="0dp"
            android:scaleType="centerInside"
            android:layout_weight="0.33"
            android:contentDescription="@string/imj3"
            android:layout_marginStart="2dp" />
    </LinearLayout>
    <LinearLayout
        android:padding="8dp"
        android:layout_width="match_parent"
        android:background="#2137AF"
        android:layout_height="0dp"
        android:layout_weight="0.23">
        <ImageView
            android:id="@+id/img4"
            android:background="#FFFFFF"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="0dp"
            android:layout_marginRight="17dp"
            android:layout_marginBottom="2dp"
            android:scaleType="centerInside"
            android:layout_weight="0.33"
            android:contentDescription="@string/todo"
            tools:ignore="NestedWeights"
            android:layout_marginEnd="2dp" />
        <ImageView
            android:id="@+id/img5"
            android:background="#FFFFFF"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="0dp"
            android:layout_marginRight="17dp"
            android:layout_marginBottom="2dp"
            android:scaleType="centerInside"
            android:layout_weight="0.33"
            android:contentDescription="@string/imj5"
            android:layout_marginEnd="17dp" />
        <ImageView
            android:id="@+id/img6"
            android:background="#FFFFFF"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="2dp"
            android:scaleType="centerInside"
            android:layout_weight="0.33"
            android:contentDescription="@string/imj6"
            android:layout_marginStart="2dp" />
    </LinearLayout>
    <LinearLayout
        android:padding="8dp"
        android:layout_width="match_parent"
        android:background="#2137AF"
        android:layout_height="0dp"
        android:layout_weight="0.23">
        <ImageView
            android:id="@+id/img7"
            android:background="#FFFFFF"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="0dp"
            android:layout_marginRight="17dp"
            android:scaleType="centerInside"
            android:layout_weight="0.33"
            android:layout_marginEnd="2dp"
            tools:ignore="NestedWeights"
            android:contentDescription="@string/imj7" />
        <ImageView
            android:id="@+id/img8"
            android:background="#FFFFFF"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="17dp"
            android:scaleType="centerInside"
            android:layout_weight="0.33"
            android:contentDescription="@string/imj8" />
        <ImageView
            android:id="@+id/img9"
            android:background="#FFFFFF"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:scaleType="centerInside"
            android:layout_weight="0.33"
            android:layout_marginStart="2dp"
            android:contentDescription="@string/imj9" />
    </LinearLayout>
    <LinearLayout
        android:background="#2137AF"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        android:baselineAligned="false">
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:background="#2137AF"
            android:padding="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.45"
            tools:ignore="NestedWeights">
            <TextView
                android:textSize="25sp"
                android:textColor="#FFFFFF"
                android:gravity="center"
                android:id="@+id/txt_PlayerOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginLeft="8dp"
                android:text="@string/player_one"
                android:layout_marginStart="8dp" />
            <TextView
                android:textSize="25sp"
                android:textColor="#F6F3F3"
                android:gravity="center"
                android:id="@+id/txt_PlayerTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="8dp"
                android:text="@string/player_tow"
                android:layout_marginStart="8dp" />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight="0.1">
            <ImageView
                android:id="@+id/img_reset_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:src="@drawable/reset_player"
                android:scaleType="centerInside"
                android:contentDescription="@string/imj_reset_number" />
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:background="#2137AF"
            android:padding="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.45">
            <TextView
                android:textSize="20sp"
                android:textColor="#FFFFFF"
                android:gravity="right"
                android:id="@+id/txt_One"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="7dp"
                android:layout_marginLeft="4dp"
                android:text="@string/one_player"
                android:layout_marginEnd="8dp" />
            <TextView
                android:textSize="20sp"
                android:textColor="#FFFFFF"
                android:gravity="right"
                android:textStyle="bold"
                android:id="@+id/txt_Two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="4dp"
                android:text="@string/tow_player"
                android:layout_marginEnd="8dp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
